--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -48,7 +48,11 @@ android:background="@drawable/bg_color">
             android:layout_gravity="center"
             android:text="Status"
             android:textSize="18dp" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="horizontal">
         <TextView
             android:id="@+id/temp"
             android:layout_width="wrap_content"
@@ -56,7 +60,16 @@ android:background="@drawable/bg_color">
             android:layout_gravity="center"
             android:fontFamily="sans-serif-thin"
             android:text="11°C"
-            android:textSize="90dp" />
+            android:textSize="70dp" />
+
+    <ImageView
+        android:id="@+id/weatherIcon"
+        android:layout_width="120dp"
+        android:layout_height="150dp"
+        android:layout_weight="1"
+        android:src="@drawable/abc_vector_test"/>
+
+       </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,6 +93,7 @@ android:background="@drawable/bg_color">
                 android:layout_height="wrap_content"
                 android:text="Max Temp" />
         </LinearLayout>
+
 
     </LinearLayout>
 
