--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -22,7 +22,8 @@ android:background="@drawable/bg_color">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CITY, COUNTRY"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            android:layout_marginTop="50dp"/>
 
         <TextView
             android:id="@+id/updated_at"
@@ -39,7 +40,7 @@ android:background="@drawable/bg_color">
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:orientation="vertical"
-        android:layout_marginTop="300dp">
+        android:layout_marginTop="250dp">
 
         <TextView
             android:id="@+id/status"
@@ -60,14 +61,12 @@ android:background="@drawable/bg_color">
             android:layout_gravity="center"
             android:fontFamily="sans-serif-thin"
             android:text="11°C"
-            android:textSize="70dp" />
+            android:textSize="60dp" />
 
     <ImageView
         android:id="@+id/weatherIcon"
-        android:layout_width="120dp"
-        android:layout_height="150dp"
-        android:layout_weight="1"
-        android:src="@drawable/abc_vector_test"/>
+        android:layout_width="100dp"
+        android:layout_height="130dp"/>
 
        </LinearLayout>
 
