--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -9,21 +9,22 @@ android:background="@drawable/bg_color">
 <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
     android:layout_height="match_parent" android:visibility="visible">
 
+
     <LinearLayout
         android:id="@+id/addressContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
         android:gravity="center"
-        android:orientation="vertical"
-        android:layout_marginTop="-500dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:text="CITY, COUNTRY"
-            android:textSize="24dp"
-            android:layout_marginTop="50dp"/>
+            android:textSize="24dp" />
 
         <TextView
             android:id="@+id/updated_at"
@@ -33,14 +34,13 @@ android:background="@drawable/bg_color">
             android:textSize="14dp" />
     </LinearLayout>
 
-
     <LinearLayout
         android:id="@+id/overviewContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+
         android:orientation="vertical"
-        android:layout_marginTop="250dp">
+        android:layout_marginTop="150dp">
 
         <TextView
             android:id="@+id/status"
@@ -62,11 +62,16 @@ android:background="@drawable/bg_color">
             android:fontFamily="sans-serif-thin"
             android:text="11°C"
             android:textSize="60dp" />
+        <Space
+            android:layout_width="15dp"
+            android:layout_height="wrap_content" />
 
-    <ImageView
-        android:id="@+id/weatherIcon"
-        android:layout_width="100dp"
-        android:layout_height="130dp"/>
+        <ImageView
+            android:id="@+id/weatherIcon"
+            android:layout_width="100dp"
+            android:layout_height="130dp"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"/>
 
        </LinearLayout>
 
@@ -97,98 +102,235 @@ android:background="@drawable/bg_color">
     </LinearLayout>
 
 
-    <LinearLayout android:id="@+id/detailsContainer" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:orientation="vertical"
-        android:layout_alignParentBottom="true"
+    <LinearLayout
+        android:id="@+id/detailsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="380dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
+                android:background="#3CF1EBF1">
 
-        >
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:orientation="horizontal" android:weightSum="3">
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                android:orientation="vertical" android:layout_weight="1"
-                android:gravity="center" android:padding="8dp"
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/sunrise"
+                    android:tint="#FFFFFF"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Sunrise"/>
+
+                <TextView
+                    android:id="@+id/sunrise"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
+                    android:text="06:40 AM"/>
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
                 android:background="#3CF1EBF1">
-                <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                    android:src="@drawable/sunrise" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:textSize="12dp" android:text="Sunrise"/>
-                <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:textSize="14dp"
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/sunset"
+                    android:tint="#FFFFFF"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Sunset"/>
+
+                <TextView
+                    android:id="@+id/sunset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
+                    android:text="06:40 AM"/>
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
+                android:background="#3CF1EBF1">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/wind"
+                    android:tint="#FFFFFF"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Wind"/>
+
+                <TextView
+                    android:id="@+id/wind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
                     android:text="06:40 AM"/>
             </LinearLayout>
-            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                android:orientation="vertical" android:layout_weight="1"
-                android:gravity="center" android:padding="8dp"
-                android:background="#3CF1EBF1">
-                <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                    android:src="@drawable/sunset" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:textSize="12dp" android:text="Sunset"/>
-                <TextView android:id="@+id/sunset" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:textSize="14dp"
-                    android:text="06:40 AM"/>
-            </LinearLayout>
-            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                android:orientation="vertical" android:layout_weight="1"
-                android:gravity="center" android:padding="8dp"
-                android:background="#3CF1EBF1">
-                <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                    android:src="@drawable/wind" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:textSize="12dp" android:text="Wind"/>
-                <TextView android:id="@+id/wind" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:textSize="14dp"
-                    android:text="06:40 AM"/>
-            </LinearLayout>
+
         </LinearLayout>
 
-        <Space android:layout_width="wrap_content" android:layout_height="10dp"/>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp"/>
 
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:orientation="horizontal" android:weightSum="3">
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                android:orientation="vertical" android:layout_weight="1"
-                android:gravity="center" android:padding="8dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
                 android:background="#3CF1EBF1">
-                <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                    android:src="@drawable/pressure" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:textSize="12dp" android:text="Pressure"/>
-                <TextView android:id="@+id/pressure" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:textSize="14dp"
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/pressure"
+                    android:tint="#FFFFFF"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Pressure"/>
+
+                <TextView
+                    android:id="@+id/pressure"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
                     android:text="06:40 AM"/>
             </LinearLayout>
-            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                android:orientation="vertical" android:layout_weight="1"
-                android:gravity="center" android:padding="8dp"
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
                 android:background="#3CF1EBF1">
-                <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                    android:src="@drawable/humidity" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:textSize="12dp" android:text="Humidity"/>
-                <TextView android:id="@+id/humidity" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:textSize="14dp"
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/humidity"
+                    android:tint="#FFFFFF"/>
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Humidity"/>
+
+                <TextView
+                    android:id="@+id/humidity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14dp"
                     android:text="06:40 AM"/>
             </LinearLayout>
-            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                android:orientation="vertical" android:layout_weight="1"
-                android:gravity="center" android:padding="8dp"
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
                 android:background="#3CF1EBF1">
-                <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                    android:src="@drawable/info" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                    android:textSize="12dp" android:text="Created By"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/info"
+                    android:tint="#FFFFFF"/>
+
+                <Space android:layout_width="wrap_content"
+                    android:layout_height="5dp"/>
+
+                <TextView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:text="Created By"/>
 
                 <TextView
                     android:id="@+id/about"
@@ -202,13 +344,19 @@ android:background="@drawable/bg_color">
 </RelativeLayout>
 
 
-<ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"
-    android:layout_height="wrap_content" android:layout_centerInParent="true"
+<ProgressBar
+    android:id="@+id/loader"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
     android:visibility="gone"/>
 
-<TextView android:id="@+id/errorText" android:layout_width="wrap_content"
-    android:layout_height="wrap_content" android:layout_centerInParent="true"
-    android:visibility="gone" android:text="Something went wrong"/>
-
+<TextView
+    android:id="@+id/errorText"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:visibility="gone"
+    android:text="ERROR! Please try again!"/>
 
 </RelativeLayout>
