--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">#122259</item>
-        <item name="colorPrimaryDark">#122259</item>
+        <item name="colorPrimary">#007B4B</item>
+        <item name="colorPrimaryDark">#009965</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
