--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,9 @@ tools:context=".WeatherActivity">
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="Name of the city"
+        android:shadowDx="2"
+        android:shadowDy="2"
+
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/BTN1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +48,8 @@ tools:context=".WeatherActivity">
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:text="CHECK WEATHER"
+        android:textSize="17dp"
+        android:background="@drawable/btn_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/citytext" />
