--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -4,7 +4,7 @@ android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:padding="35dp"
-android:background="@drawable/bg_color">
+android:background="@drawable/bcg2">
 
 <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
     android:layout_height="match_parent" android:visibility="visible">
