--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -6,8 +6,11 @@ android:layout_height="match_parent"
 android:padding="35dp"
 android:background="@drawable/bcg2">
 
-<RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:visibility="visible">
+<RelativeLayout
+    android:id="@+id/mainContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="visible">
 
 
     <LinearLayout
@@ -24,7 +27,11 @@ android:background="@drawable/bcg2">
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="CITY, COUNTRY"
-            android:textSize="24dp" />
+            android:shadowColor="#EEEEEE"
+            android:shadowDy="2"
+            android:shadowDx="2"
+            android:shadowRadius="2"
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/updated_at"
@@ -113,7 +120,8 @@ android:background="@drawable/bcg2">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="3">
+            android:weightSum="3"
+            >
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -121,7 +129,8 @@ android:background="@drawable/bcg2">
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="8dp"
-                android:background="#3CF1EBF1">
+                android:background="#3CF1EBF1"
+                >
 
                 <ImageView
                     android:layout_width="25dp"
