--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#39b98e</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
